# SatelliteRTOS

./: Cargo.toml  README.md  benchmark_summary.txt  cpu_log.txt  evaluation_log_2025-09-05_18-39-08.txt  ocs_log.txt
src/: cpu.rs  downlink.rs  fault.rs  lib.rs  main.rs  scheduler.rs  sensor.rs  sensor_data.rs
