[package]
name = "satellite_ocs"
version = "0.1.0"
edition = "2021"

[dependencies]
lapin = "2.5.4"
crossbeam-channel = "0.5"
rand = "0.9.1"
chrono = { version = "0.4.41", features = ["serde"] }
sysinfo = { version = "0.30", features = ["multithread"] }
scheduled-thread-pool = "0.2.7"
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
regex = "1.7"


[dev-dependencies]
criterion = "0.5"
